<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/white"
    android:padding="20dp"
    tools:context=".RegisterActivity">

    <EditText
        android:id="@+id/editEmailAddress"
        android:layout_width="fill_parent"
        android:layout_height="47dp"
        android:ems="10"
        android:hint="@string/enterEmailAddress"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.132"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="fill_parent"
        android:layout_height="47dp"
        android:ems="10"
        android:hint="@string/enterPassword"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.132"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editUsername"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editUsername"
        android:layout_width="fill_parent"
        android:layout_height="47dp"
        android:ems="10"
        android:hint="@string/enterUsername"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.132"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editEmailAddress"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editConfirmPassword"
        android:layout_width="fill_parent"
        android:layout_height="47dp"
        android:ems="10"
        android:hint="@string/confirmPassword"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.132"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPassword"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonUploadProfilePicture"
        android:layout_width="313dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/uploadProfilePicture"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editConfirmPassword"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editFullName"
        android:layout_width="fill_parent"
        android:layout_height="47dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/enterFullName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.132"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonUploadProfilePicture"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editBiography"
        android:layout_width="fill_parent"
        android:layout_height="106dp"
        android:ems="10"
        android:hint="@string/enterBiography"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.132"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editFullName"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editInterests"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:ems="10"
        android:hint="@string/enterInterests"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.132"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editBiography"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editGPA"
        android:layout_width="fill_parent"
        android:layout_height="47dp"
        android:ems="10"
        android:hint="@string/enterGPA"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.132"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editInterests"
        app:layout_constraintVertical_bias="0.01" />

    <Button
        android:id="@+id/buttonNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/next"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editGPA"
        app:layout_constraintVertical_bias="0.0" />

    <!--TODO - Enter courses-->
</androidx.constraintlayout.widget.ConstraintLayout>