<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/white"
    tools:context=".Bindr">


    <Button
        android:id="@+id/buttonAddCourse"
        android:layout_width="313dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/addCourse"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <TableLayout
        android:id="@+id/tableCoursesAdded"
        android:layout_width="fill_parent"
        android:layout_height="607dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAddCourse">

        <TableRow>

            <TextView
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginLeft="10dp"
                android:text="@string/courseNameHeader"
                android:textSize="16sp" />

            <TextView
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginLeft="10dp"
                android:text="@string/courseIDHeader"
                android:textSize="16sp" />
            <TextView
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_marginLeft="10dp"
                android:text="@string/removeCourseHeader"
                android:textSize="16sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginLeft="10dp"
                android:text="@string/courseNameHeader"
                android:textSize="16sp" />

            <TextView
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginLeft="10dp"
                android:text="@string/courseIDHeader"
                android:textSize="16sp" />
            <TextView
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_marginLeft="10dp"
                android:text="@string/removeCourseHeader"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>